--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <title>Carousel</title>
 
     <!-- Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     
+    <main>
+        <section class="wrapper">
+            <button class="prev">
+                <i class="fa-solid fa-chevron-up fa-beat"></i>
+            </button>
+            <button class="next">
+                <i class="fa-solid fa-chevron-down fa-beat"></i>
+            </button>
+        </section>
+    </main>
 
     <!-- JS -->
     <script src="./js/script.js"></script>
