costruzione dello script e delle funzioni interne

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <main>
         <section class="wrapper">
+            <div class="scroll"></div>
             <button class="prev">
                 <i class="fa-solid fa-chevron-up fa-beat"></i>
             </button>
